ui: emphasize timers, hide transcript behind toggle; polish styling
- Make speaker timers and percentages prominent; destiny.gg-inspired visuals
- Collapse transcript behind a Show/Hide toggle
- Device list auto-populated; controls clearly separated (URL vs Mic)

fix: stop endpoint and transcript duplication

- Robust stop: escalate SIGINT→SIGTERM→SIGKILL for ffmpeg
- Replace partial lines with final to prevent duplicate transcript lines

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -48,7 +48,10 @@
       </div>
     </section>
 
-    <section class="transcript glass" id="transcript"></section>
+    <section class="section glass">
+      <button class="primary" id="toggle-transcript">Show transcript</button>
+      <div class="transcript" id="transcript" style="display:none;"></div>
+    </section>
 
     <script src="/app.js" defer></script>
   </body>
